syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/gomscourse/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc GetChatMessages(GetChatMessagesRequest) returns (GetChatMessagesResponse);
  rpc GetAvailableChats(GetAvailableChatsRequest) returns (GetAvailableChatsResponse);
  rpc ConnectChat(ConnectChatRequest) returns (stream ChatMessage);
}

message CreateRequest {
  repeated string usernames = 1;
  string title = 2;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  string text = 1;
  google.protobuf.Timestamp timestamp = 2;
  int64 chatID = 3;
}

message GetChatMessagesRequest {
  int64 id = 1;
  int64 page = 2;
  int64 pageSize = 3;
}

message GetChatMessagesResponse {
  repeated ChatMessage messages = 1;
  uint64 count = 2;
}

message GetAvailableChatsRequest {}

message GetAvailableChatsResponse {
  repeated Chat chats = 1;
  uint64 count = 2;
}

message Chat {
  int64 ID = 1;
  string Title = 2;
  google.protobuf.Timestamp created = 5;
  google.protobuf.Timestamp updated = 6;
}

message ChatMessage {
  int64 ID = 1;
  int64 chatID = 2;
  string author = 3;
  string content = 4;
  google.protobuf.Timestamp created = 5;
  google.protobuf.Timestamp updated = 6;
}

message ConnectChatRequest {
  int64 chat_id = 1;
}